I know why it didn't work correctly. Arrays.toList returns an immutable object of List. This solution works correct, byt Codewars has a problem with functionality that has not been described in task.